--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
+		"@react-three/drei": "^7.18.0",
 		"@react-three/fiber": "^6.1.2",
 		"@remotion/cli": "^2.3.2",
 		"@remotion/eslint-config": "^2.1.0",
@@ -18,6 +19,7 @@
 		"@remotion/three": "^2.3.2",
 		"@types/react": "^17.0.0",
 		"@types/three": "^0.128.0",
+		"drei": "^2.2.21",
 		"eslint": "^7.15.0",
 		"prettier": "^2.2.1",
 		"react": "^17.0.2",
