--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@react-three/drei": "^7.18.0",
-		"@react-three/fiber": "^6.1.2",
-		"@remotion/cli": "^2.3.2",
-		"@remotion/eslint-config": "^2.1.0",
-		"@remotion/media-utils": "^2.3.2",
-		"@remotion/three": "^2.3.2",
-		"@types/react": "^17.0.0",
+		"@react-three/drei": "^9.78.1",
+		"@react-three/fiber": "^8.13.4",
+		"@remotion/cli": "4.0.4",
+		"@remotion/eslint-config": "4.0.4",
+		"@remotion/media-utils": "4.0.4",
+		"@remotion/three": "4.0.4",
+		"@types/react": "^18.2.14",
 		"@types/three": "^0.128.0",
 		"drei": "^2.2.21",
 		"eslint": "^7.15.0",
-		"prettier": "^2.2.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"remotion": "^2.3.2",
-		"three": "^0.129.0",
-		"typescript": "4.4.2"
+		"prettier": "^3.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"remotion": "4.0.4",
+		"three": "^0.154.0",
+		"typescript": "4.9.5"
 	}
 }
